<resources>
    <string name="app_name">gr21 DTUGuide</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="topbar_searchview_hint">Search here</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_navigate">Location</string>
    <string name="title_floor">Floor</string>
    <string name="title_filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="navigate_to_dtu">Navigate to DTU</string>
    <string name="favorite_title">Favorites</string>
    <string name="not_implemented_title">Not Implemented</string>

    <string name="basement_floor">Basement</string>
    <string name="first_floor">First floor</string>
    <string name="second_floor">Second floor</string>
    <string name="cantines">Cantines</string>
    <string name="rooms">Rooms</string>
    <string name="toilets">Restrooms</string>

    <string name="favorite">Your Favorites</string>
    <string name="help_feedback">Help and Feedback</string>
    <string name="about">About DTU Guide</string>
    <string name="campus">Change Campus</string>

    <string name="placeholder_text">Placeholder</string>
    <string name="toast_add_fav">Added to favorites</string>
    <string name="toast_rem_fav">Removed from favorites</string>
    <string name="about_text">DTU Guide is currently in beta. Features will continue to be added and improved as the product matures. \n\nThe applications purpose is to help you navigate the DTU campus by showing where specific places are located. It is also possible to search for things like \'water\', \'projectors\' etc. and the application will show you where these things are available.\n\nCreated by:\nArvid Kappelhøj Langsø\nJeppe Thougaard Nielsen\nPeter Issam El-Habr</string>

    <string name="dialog_zoom_message">At what zoom level landmarks are visible</string>
    <string name="dialog_zoom_title">Landmark zoom level</string>
    <string name="button_zoom_title">Set the landmark zoom level</string>
    <string name="button_zoom_message">At what zoom level landmarks are visible on the map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="food">Canteen and Kitchens</string>
    <string name="movement">Stairs, elevators and entrances</string>

    <string name="no_favorites">You do not have any favorites</string>
    <string name="not_implemented">Activity not implemented yet</string>

    <!-- Strings related to Settings -->
    <string name="button_fav_title">Clear the favorite list</string>
    <string name="button_fav_sub">Permanently delete all favorites</string>
    <string name="button_hist_title">Clear the recent history list</string>
    <string name="button_hist_sub">Permanently delete all entries in the recent history list</string>
    <string name="dialog_fav_title">Clear Favorites</string>
    <string name="dialog_fav_message">Are you sure you want to clear your favorites?</string>
    <string name="dialog_hist_title">Clear Recent History</string>
    <string name="dialog_hist_message">Are you sure you want to clear your recent history?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

</resources>
