<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/navigate_to_dtu"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="Navigate to DTU" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/campus" />

        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_drawer_helpfeedback"
                android:title="@string/help_feedback" />
            <item
                android:id="@+id/nav_drawer_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
