<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="4dp">

    <CheckBox
        android:id="@+id/map_layers_checkbox_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/second_floor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/map_layers_checkbox_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/first_floor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_layers_checkbox_2" />

    <CheckBox
        android:id="@+id/map_layers_checkbox_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="false"
        android:text="@string/basement_floor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_layers_checkbox_1"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>